# winb

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: f23693425fae_initial_schema.py  f711b89f7179_initial_schema.py
docker/app/: Dockerfile
docs/: README.md  architecture.md  data-sources.md
scripts/: check_db.py  inspect_html.py  inspect_html_deep.py
src/winb/: __init__.py
src/winb/data/: README.md  __init__.py  adapters.py  database.py  models.py
src/winb/evaluation/: README.md  __init__.py
src/winb/features/: README.md  __init__.py
src/winb/models/: README.md  __init__.py
src/winb/pipeline/: README.md  __init__.py
src/winb/scraper/: README.md  __init__.py  bleague.py  client.py
tests/: conftest.py  test_data_adapters.py  test_data_models.py  test_scraper_bleague.py  test_scraper_client.py  test_smoke.py
tests/fixtures/bleague/: club_detail_692.html  game_detail_505443.html  roster_detail_51000531.html  schedule_2026_04.html
