[project]
name = "winb"
version = "0.1.0"
description = "B.LEAGUE win probability prediction system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Data
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",

    # ML
    "scikit-learn>=1.3",
    "xgboost>=2.0",

    # DB
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",

    # Scraping
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",

    # Utilities
    "python-dotenv>=1.0",
    "tenacity>=8.2",

    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "ipython>=8.18",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/winb"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits live services; skipped in normal runs",
]
